// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`interest-in-land GET /change should render the interest in land page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> What is your interest in the land?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio" name="interestInLandRadio"
                                        type="radio" value="Owner">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio">Owner</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio-2" name="interestInLandRadio"
                                        type="radio" value="Mortgage lender">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio-2">Mortgage lender</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio-3" name="interestInLandRadio"
                                        type="radio" value="Tenant">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio-3">Tenant</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio-4" name="interestInLandRadio"
                                        type="radio" value="Other" data-aria-controls="conditional-interest-in-land-radio-4">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio-4">Other</label>
                                    </div>
                                    <div class="govuk-radios__conditional govuk-radios__conditional--hidden"
                                    id="conditional-interest-in-land-radio-4">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-label--s" for="interest-in-land-other">Enter interest in the land</label>
                                            <input class="govuk-input" id="interest-in-land-other"
                                            name="interestInLandOther" type="text" value="">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`interest-in-land GET /change should render the interest in land page with a radio selected if interestInLand exists on the Appellant Case 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal undefined</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> What is your interest in the land?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio" name="interestInLandRadio"
                                        type="radio" value="Owner" checked>
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio">Owner</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio-2" name="interestInLandRadio"
                                        type="radio" value="Mortgage lender">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio-2">Mortgage lender</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio-3" name="interestInLandRadio"
                                        type="radio" value="Tenant">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio-3">Tenant</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio-4" name="interestInLandRadio"
                                        type="radio" value="Other" data-aria-controls="conditional-interest-in-land-radio-4">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio-4">Other</label>
                                    </div>
                                    <div class="govuk-radios__conditional govuk-radios__conditional--hidden"
                                    id="conditional-interest-in-land-radio-4">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-label--s" for="interest-in-land-other">Enter interest in the land</label>
                                            <input class="govuk-input" id="interest-in-land-other"
                                            name="interestInLandOther" type="text" value="">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`interest-in-land GET /change should render the interest in land page with a text field for other if exists on the Appellant Case 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal undefined</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> What is your interest in the land?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio" name="interestInLandRadio"
                                        type="radio" value="Owner">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio">Owner</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio-2" name="interestInLandRadio"
                                        type="radio" value="Mortgage lender">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio-2">Mortgage lender</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio-3" name="interestInLandRadio"
                                        type="radio" value="Tenant">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio-3">Tenant</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio-4" name="interestInLandRadio"
                                        type="radio" value="Other" checked data-aria-controls="conditional-interest-in-land-radio-4">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio-4">Other</label>
                                    </div>
                                    <div class="govuk-radios__conditional" id="conditional-interest-in-land-radio-4">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-label--s" for="interest-in-land-other">Enter interest in the land</label>
                                            <input class="govuk-input" id="interest-in-land-other"
                                            name="interestInLandOther" type="text" value="Other">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`interest-in-land POST /change should re-render the page with an error if no radio button is selected 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#interest-in-land-radio">What is your interest in the land?</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> What is your interest in the land?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio" name="interestInLandRadio"
                                        type="radio" value="Owner">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio">Owner</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio-2" name="interestInLandRadio"
                                        type="radio" value="Mortgage lender">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio-2">Mortgage lender</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio-3" name="interestInLandRadio"
                                        type="radio" value="Tenant">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio-3">Tenant</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio-4" name="interestInLandRadio"
                                        type="radio" value="Other" data-aria-controls="conditional-interest-in-land-radio-4">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio-4">Other</label>
                                    </div>
                                    <div class="govuk-radios__conditional govuk-radios__conditional--hidden"
                                    id="conditional-interest-in-land-radio-4">
                                        <div class="govuk-form-group govuk-form-group--error">
                                            <label class="govuk-label govuk-label--s" for="interest-in-land-other">Enter interest in the land</label>
                                            <p id="interest-in-land-other-error"
                                            class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span>
                                            </p>
                                            <input class="govuk-input govuk-input--error" id="interest-in-land-other"
                                            name="interestInLandOther" type="text" value="" aria-describedby="interest-in-land-other-error">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`interest-in-land POST /change should re-render the page with an error if the "Other" radio button is selected and no answer is given for interest in land 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#interest-in-land-other">What is your interest in the land?</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> What is your interest in the land?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio" name="interestInLandRadio"
                                        type="radio" value="Owner">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio">Owner</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio-2" name="interestInLandRadio"
                                        type="radio" value="Mortgage lender">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio-2">Mortgage lender</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio-3" name="interestInLandRadio"
                                        type="radio" value="Tenant">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio-3">Tenant</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio-4" name="interestInLandRadio"
                                        type="radio" value="Other" checked data-aria-controls="conditional-interest-in-land-radio-4">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio-4">Other</label>
                                    </div>
                                    <div class="govuk-radios__conditional" id="conditional-interest-in-land-radio-4">
                                        <div class="govuk-form-group govuk-form-group--error">
                                            <label class="govuk-label govuk-label--s" for="interest-in-land-other">Enter interest in the land</label>
                                            <p id="interest-in-land-other-error"
                                            class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> What is your interest
                                                in the land?</p>
                                            <input class="govuk-input govuk-input--error" id="interest-in-land-other"
                                            name="interestInLandOther" type="text" aria-describedby="interest-in-land-other-error">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`interest-in-land POST /change should re-render the page with an error if the "Other" radio button is selected and the answer is given for interest in land is too long 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#interest-in-land-other">Your interest in the land must be 1000 characters or less</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> What is your interest in the land?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio" name="interestInLandRadio"
                                        type="radio" value="Owner">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio">Owner</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio-2" name="interestInLandRadio"
                                        type="radio" value="Mortgage lender">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio-2">Mortgage lender</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio-3" name="interestInLandRadio"
                                        type="radio" value="Tenant">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio-3">Tenant</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="interest-in-land-radio-4" name="interestInLandRadio"
                                        type="radio" value="Other" checked data-aria-controls="conditional-interest-in-land-radio-4">
                                        <label class="govuk-label govuk-radios__label" for="interest-in-land-radio-4">Other</label>
                                    </div>
                                    <div class="govuk-radios__conditional" id="conditional-interest-in-land-radio-4">
                                        <div class="govuk-form-group govuk-form-group--error">
                                            <label class="govuk-label govuk-label--s" for="interest-in-land-other">Enter interest in the land</label>
                                            <p id="interest-in-land-other-error"
                                            class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Your interest in the
                                                land must be 1000 characters or less</p>
                                            <input class="govuk-input govuk-input--error"
                                            id="interest-in-land-other" name="interestInLandOther" type="text" value="11111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111"
                                            aria-describedby="interest-in-land-other-error">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;
